updated dock part to be in the control category

--- a/GameData/LaserJock Industries/Parts/LJI_SpaceDock/part.cfg
+++ b/GameData/LaserJock Industries/Parts/LJI_SpaceDock/part.cfg
@@ -15,7 +15,7 @@ PART
     TechRequired = advFlightControl
     entryCost = 2800
     cost = 450
-    category = Pods
+    category = Control
     subcategory = 0
     title = Another fake dock
     manufacturer = LJI
